# june-llm-exercise

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  read_data.py
exercise_tooling/: config.py  prompts.py  team.py
